--- a/Phase_B/gptalk-frontend/src/styles.scss
+++ b/Phase_B/gptalk-frontend/src/styles.scss
@@ -6,6 +6,9 @@
 :root {
 	--primary-clr: #222831;
 	--background-clr: #ededed;
+  --background-over-block-clr: #d9d9d9;
+  --background-over-block-border-clr: #c1c1c1;
+  --background-over-block-text-clr: #c1c1c1;
 	--primary-text-clr: #fff;
   --accent-text-clr: #46be52;
 	--secondary-text-clr: #222831;
