Updated learn component and related functionality to work with new exercise generation logic

--- a/Phase_B/gptalk-frontend/src/app/pages/learn/fill-in-the-blank/fill-in-the-blank.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/fill-in-the-blank/fill-in-the-blank.component.html
@@ -1,8 +1,8 @@
-  <div class="sentence-wrapper flex justify-content-start gap-3 mb-2" [dir]="utilHtml.langDirection(lessonLanguage)">
-    <p>{{exerciseData().sentenceBeforeBlank}} </p>
+  <div class="sentence-wrapper flex flex-wrap gap-3 mb-2" [dir]="utilHtml.langDirection(lessonLanguage)">
+    <p>{{exerciseData().sentenceBeforeBlank}}</p>
     <input
       #inputField
-      class="fill-in-the-blank-input-field flex-grow-1 flex-wrap"
+      class="fill-in-the-blank-input-field text-center"
       autofocus
       type="text"
       id="inputForm"
