add languages ui to my profile

--- a/Phase_B/gptalk-frontend/src/app/pages/my-profile/my-profile.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/my-profile/my-profile.component.html
@@ -7,7 +7,7 @@
 		class="profile__statistics grid-block"
 	></app-profile-statistics>
 	<app-profile-achievements [achievements]="myProfile.achievements" class="profile__achievements grid-block"></app-profile-achievements>
-	<app-profile-languages class="profile__languages grid-block"></app-profile-languages>
+	<app-profile-languages [languages]="myProfile.languages" class="profile__languages grid-block"></app-profile-languages>
 	<app-profile-latest-results
 		class="profile__latest-results grid-block"
 	></app-profile-latest-results>
