--- a/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-languages/profile-languages.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-languages/profile-languages.component.scss
@@ -4,3 +4,30 @@ main {
 	flex-direction: column;
 	justify-content: center;
 }
+
+.content {
+   & > div {
+    margin-top: 0.5rem;
+   }
+}
+
+.language {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+  background-color: rgba(0, 0, 0, 0.138);
+  border-radius: 8px;
+  padding: 0.5rem 1.7rem;
+
+  & div {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+    & p {
+      font-size: 1.4rem;
+      font-family: 'Rubik' !important;
+    }
+  }
+}
