add latest result in my profile

--- a/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-latest-results/profile-latest-results.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-latest-results/profile-latest-results.component.html
@@ -1,3 +1,14 @@
 <main>
   <h1>Latest Results</h1>
+  <div class="content">
+    @for (result of results(); track result) {
+      <div class="result">
+				<div>
+					<img src="assets/profile/coin.png" alt="coin"/>
+					<p>{{ result.exp }} exp</p>
+				</div>
+				<p>{{ result.date | date: 'dd/MM/yyyy' }}</p>
+			</div>
+    }
+  </div>
 </main>
