--- a/Phase_B/gptalk-frontend/src/app/pages/my-profile/my-profile.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/my-profile/my-profile.component.html
@@ -9,6 +9,7 @@
 	<app-profile-achievements [achievements]="myProfile.achievements" class="profile__achievements grid-block"></app-profile-achievements>
 	<app-profile-languages [languages]="myProfile.languages" class="profile__languages grid-block"></app-profile-languages>
 	<app-profile-latest-results
+    [results]="myProfile.latestResults"
 		class="profile__latest-results grid-block"
 	></app-profile-latest-results>
 </main>
