--- a/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-latest-results/profile-latest-results.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-latest-results/profile-latest-results.component.scss
@@ -4,3 +4,25 @@ main {
 	flex-direction: column;
 	justify-content: center;
 }
+
+.content {
+  & > div {
+   margin-top: 0.5rem;
+  }
+}
+
+.result {
+ display: flex;
+ align-items: center;
+ width: 100%;
+ justify-content: space-between;
+ background-color: rgba(0, 0, 0, 0.138);
+ border-radius: 8px;
+ padding: 0.5rem 1.7rem;
+
+ & div {
+   display: flex;
+   align-items: center;
+   gap: 1rem;
+ }
+}
