--- a/Phase_B/gptalk-frontend/src/app/pages/learn/fill-in-the-blank/fill-in-the-blank.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/fill-in-the-blank/fill-in-the-blank.component.html
@@ -38,4 +38,8 @@
     }
   </div>
 
-
+  @if (isDone()) {
+    <div class="translation-wrapper flex justify-content-center">
+      <p><b>Translation:</b> {{exerciseData().translation}}</p>
+    </div>
+  }
