--- a/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.html
@@ -1,1 +1,6 @@
-<p>chat-with-me works!</p>,
+<div class="grid place"></div>
+@for (message of conversation(); track message) {
+  <div>message</div>
+} @empty {
+  Let's start our chat!
+}
