--- a/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.html
@@ -3,6 +3,7 @@
     Loading lesson...
   } @else if (!isLoading()) {
     <!--    Current lesson  -->
+    <app-exp-bar></app-exp-bar>
       <!--  Heading  -->
     <div class="heading-wrapper flex justify-content-center text-center mb-4">
       <p>
