update chat with me structure wip

--- a/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.html
@@ -1,6 +1,7 @@
-<div class="grid place"></div>
-@for (message of conversation(); track message) {
-  <div>message</div>
-} @empty {
-  Let's start our chat!
-}
+<div class="messages-wrapper">
+  @for (message of conversation(); track message) {
+    <div class="messages">{{message}}</div>
+  } @empty {
+    Let's start our chat!
+  }
+</div>
