--- a/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.scss
@@ -1,3 +1,10 @@
 :host {
   display: block;
+  height: 100%;
+}
+
+.messages-wrapper {
+  height: 100%;
+  display: grid;
+  place-items: center;
 }
