--- a/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.scss
@@ -1,10 +1,40 @@
 :host {
-  display: block;
-  height: 100%;
+	display: block;
+	height: 100%;
+  padding: 1.5rem 2.5rem;
 }
 
 .messages-wrapper {
-  height: 100%;
-  display: grid;
-  place-items: center;
+	height: 100%;
+  max-height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
+
+  & .message {
+    max-width: 70%;
+  }
+
+	& .user {
+		align-self: flex-end;
+    background-color: var(--background-over-block-clr) !important;
+	}
+
+	& .system {
+		align-self: flex-start;
+    background-color: var(--green-500);
+	}
+}
+
+.no-messages {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	& span {
+		font-size: 1.5rem;
+	}
 }
