--- a/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.scss
@@ -1,29 +1,48 @@
 :host {
 	display: block;
 	height: 100%;
-  padding: 1.5rem 2.5rem;
+	padding: 1.5rem 2.5rem;
 }
 
 .messages-wrapper {
 	height: 100%;
-  max-height: 100%;
+	max-height: 100%;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
 	gap: 0.5rem;
 
-  & .message {
-    max-width: 70%;
-  }
+	.messages {
+		height: 100%;
+		max-height: 80%;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		gap: 0.5rem;
+    overflow-y: auto;
 
-	& .user {
-		align-self: flex-end;
-    background-color: var(--background-over-block-clr) !important;
+		& .message {
+			max-width: 70%;
+		}
+
+		& .user {
+			align-self: flex-end;
+			background-color: var(--background-over-block-clr) !important;
+		}
+
+		& .system {
+			align-self: flex-start;
+			background-color: var(--green-200);
+		}
 	}
+}
 
-	& .system {
-		align-self: flex-start;
-    background-color: var(--green-200);
+.language-wrapper {
+	align-items: center;
+	justify-content: center;
+
+	& h1 {
+		text-align: center;
 	}
 }
 
@@ -36,5 +55,31 @@
 
 	& span {
 		font-size: 1.5rem;
+	}
+}
+
+.languages {
+	margin-top: 1.5rem;
+	padding: 8rem;
+	display: grid;
+	grid-template-columns: auto auto;
+	gap: 7rem;
+
+	.language {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		transition: 0.4s;
+		cursor: pointer;
+
+		&:hover {
+			transform: scale(1.1);
+		}
+
+		& span {
+			font-size: 1.5rem;
+			margin-top: 1.5rem;
+		}
 	}
 }
