--- a/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.html
@@ -32,7 +32,7 @@
       }
     </div>
 		<div
-			class="p-3 md:p-4 w-full lg:p-6 flex flex-column sm:flex-row align-items-center border-top-1 surface-border gap-3"
+			class="input p-3 md:p-4 w-full lg:p-6 flex flex-column sm:flex-row align-items-center border-top-1 surface-border gap-3"
 		>
 			<input
 				id="message"
