--- a/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.scss
@@ -12,14 +12,19 @@
 	flex-direction: column;
 	gap: 0.5rem;
 
+  .input {
+    box-sizing: border-box;
+  }
+
 	.messages {
-		height: 100%;
-		max-height: 80%;
+    flex-grow: 1;
+    overflow-y: auto;
+    box-sizing: border-box;
 		width: 100%;
 		display: flex;
 		flex-direction: column;
 		gap: 0.5rem;
-    overflow-y: auto;
+    max-height: 72dvh;
 
 		& .message {
 			max-width: 70%;
