fix rtl ltr in chat

--- a/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.html
@@ -22,7 +22,7 @@
           [class.user]="message.role === 'user'"
           [class.system]="message.role === 'system'"
         >
-          {{ message.content }}
+          <span dir="auto">{{ message.content }}</span>
         </div>
       } @empty {
         <div class="no-messages">
