Updated fillInTheBlank input field design

--- a/Phase_B/gptalk-frontend/src/app/pages/learn/fill-in-the-blank/fill-in-the-blank.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/fill-in-the-blank/fill-in-the-blank.component.html
@@ -3,11 +3,13 @@
     <input
       #inputField
       class="fill-in-the-blank-input-field text-center"
+      autocomplete="off"
       autofocus
       type="text"
       id="inputForm"
       title="Input Field"
       [readOnly]="isDone()"
+      [placeholder]="isDone() ? '' : '____'"
       [value]="isDone() ? exerciseData().answer : ''"
       (blur)="!isDone() ? utilHtml.forceFocus(inputFieldRef) : ''"
       (keyup.enter)="inputForm.value ?
