Changed level calculation function in auth.service
Additional minor fixes and added documentation

--- a/Phase_B/gptalk-frontend/src/app/pages/learn/results-screen/results-screen.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/results-screen/results-screen.component.html
@@ -2,7 +2,7 @@
   <p>Correct answers:</p>
   <p>{{correctAnswers}} out of {{totalExercises()}}</p>
   <p>Experience points earned:</p>
-  <p>PLACEHOLDER_XP</p>
+  <p>{{ lessonExp() }}</p>
 
   <!-- Returns the user to the home page -->
   <div class="buttons-group flex justify-content-center mt-4">
