Added daily word generator

--- a/Phase_B/gptalk-frontend/src/app/pages/home/home.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/home/home.component.html
@@ -1,4 +1,44 @@
 <div class="content">
-  <h1>Good {{getTimeOfDay()}} {{firstName()}}!</h1>
-  <h1>Pick one of the options on the left to get started</h1>
+  <h1>Good {{getTimeOfDay()}} {{userData().firstName}}!</h1>
+  <h4 style="font-weight: normal">Pick one of the options on the left to get started</h4>
+
+<!--  TODO: add 3 stats (like in my profile)-->
+  <h2 class="text-center">Word of the day:</h2>
+  <div class="word-of-the-day-wrapper grid col-offset-1">
+    <button class="border-none cursor-pointer" style="background: none" onclick="">
+      <i [class]="'pi pi-chevron-left'" style="font-size: 3rem"></i>
+    </button>
+
+    <p-panel class="word-of-the-day col-8 ">
+      <ng-template pTemplate="header">
+        <div class="flex align-items-center gap-2">
+          <p-avatar
+            [image]="languageIconRecord[dailyWord().language]"
+            size="normal"
+            shape="square" />
+          <span class="font-bold">
+                {{dailyWord().word}}
+            </span>
+        </div>
+      </ng-template>
+      <p class="mb-2">
+        {{dailyWord().definition}}
+      </p>
+      <p class="font-italic">
+        {{dailyWord().example}}
+      </p>
+      <p>
+        ({{dailyWord().translation}})
+      </p>
+    </p-panel>
+
+    <button class="border-none cursor-pointer" style="background: none" onclick="">
+      <i [class]="'pi pi-chevron-right'" style="font-size: 3rem"></i>
+    </button>
+  </div>
+
+  <h4>Your current level: {{level()}}</h4>
+  <h4>Experience points needed for next level: {{util.calculateExpForNextLevel(level())}}</h4>
+  <h4></h4>
+
 </div>
