--- a/Phase_B/gptalk-frontend/src/app/pages/home/home.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/home/home.component.scss
@@ -13,6 +13,33 @@
   color: var(--primary-clr)
 }
 
+.statistics-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  border: 2px solid var(--primary-clr);
+  border-radius: 6px;
+
+  & .stat-block {
+    display: flex;
+    align-items: center;
+    padding: 2rem;
+    gap: 1rem;
+
+    & div {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+
+      small {
+        color: rgba(0, 0, 0, 0.454);
+      }
+
+      p {
+        font-size: 2rem;
+      }
+    }
+  }
+}
 ::ng-deep .word-of-the-day {
   border-radius: 15px;
   & .p-panel-content, .p-panel-header {
@@ -20,3 +47,5 @@
     background-color: var(--background-clr);
   }
 }
+
+
