--- a/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.scss
@@ -18,6 +18,14 @@
   font-size: 2.6rem;
 }
 
+.loading-wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 ::ng-deep .translation-wrapper p {
   font-size: var(--t_large);
 }
