--- a/Phase_B/gptalk-frontend/src/app/pages/learn/reorder-sentence/reorder-sentence.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/reorder-sentence/reorder-sentence.component.html
@@ -1,3 +1,4 @@
+<!--TODO: adjust design to handle longer sentences-->
     <div class="buttons-group h-5rem gap-2 flex justify-content-center mb-4" [dir]="utilHtml.langDirection(lessonLanguage)">
       <!--   Chosen words   -->
       @for (word of chosenWords(); track word; let idx = $index) {
