--- a/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.scss
@@ -24,6 +24,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  & p {
+    font-size: 1.5rem;
+  }
 }
 
 ::ng-deep .translation-wrapper p {
