--- a/Phase_B/gptalk-frontend/src/app/pages/about/about.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/about/about.component.scss
@@ -1,3 +1,25 @@
 :host {
   display: block;
 }
+
+.content {
+  display: flex;
+  flex-direction: column;
+  font-family: Poppins, sans-serif;
+  font-size: 1rem;
+  color: var(--primary-clr)
+}
+
+ul {
+  padding-left: 1rem;
+  margin-bottom: 1.5rem;
+}
+
+p {
+  margin-bottom: 1.5rem;
+}
+
+img {
+  width: 7rem;
+  margin-bottom: 1rem;
+}
