--- a/Phase_B/gptalk-frontend/src/app/pages/leaderboard/leaderboard.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/leaderboard/leaderboard.component.scss
@@ -1,3 +1,27 @@
-:host {
-  display: block;
+main {
+	display: flex;
+	align-items: flex-start;
+	flex-direction: column;
+	height: 100%;
+	gap: 2.5rem;
+	padding: 1rem 3rem;
+
+	& .top-3 {
+		display: flex;
+    gap: 2em;
+
+		& .placement {
+			display: flex;
+      flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			background: var(--background-over-block-clr);
+      border-radius: 6px;
+      padding: 1.5rem;
+		}
+	}
+}
+
+h1 {
+	align-self: flex-start;
 }
