--- a/Phase_B/gptalk-frontend/src/app/pages/leaderboard/leaderboard.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/leaderboard/leaderboard.component.html
@@ -2,25 +2,74 @@
 	<h1>Leaderboard</h1>
 	@if (!loading()) {
 		<div class="top-3">
-			<div class="placement">
-				<ng-lottie [options]="goldMedalOptions"></ng-lottie>
-        <app-user-avatar [size]="'large'"></app-user-avatar>
-				<p>{{ top3Users()[0].firstName }}</p>
-				<p>{{ top3Users()[0].lastName }}</p>
-				<p>{{ top3Users()[0].totalExp }}</p>
-				<p>{{ calculateLevelFunc(top3Users()[0].totalExp) }}</p>
-			</div>
-			<div class="placement">
-				<ng-lottie [options]="silverMedalOptions"></ng-lottie>
-				<p>{{ top3Users()[1] | json }}</p>
-			</div>
-			<div class="placement">
-				<ng-lottie [options]="bronzeMedalOptions"></ng-lottie>
-				<p>{{ top3Users()[2] | json }}</p>
-			</div>
+			@for (user of top3Users(); track user; let idx = $index) {
+				<div class="placement">
+					<ng-lottie [options]="medalOptions[idx]"></ng-lottie>
+					<div class="content">
+						<app-user-avatar [size]="'large'"></app-user-avatar>
+						@if (user) {
+							<div class="details">
+								<p>
+									{{ user.firstName | titlecase }}
+									{{ user.lastName | titlecase }}
+								</p>
+								<span>{{ user.totalExp }} EXP</span>
+								<br />
+								<small>Level {{ calculateLevelFunc(user.totalExp) }}</small>
+								<br />
+								<small>Member {{ user.createdAt | sinceDate }}</small>
+							</div>
+						} @else {
+							<div class="details">
+								<p>--</p>
+								<span>--</span>
+								<br />
+								<small>--</small>
+								<br />
+								<small>--</small>
+							</div>
+						}
+					</div>
+				</div>
+			}
 		</div>
-		<div class="leadboard-table">
-      {{ top4To10Users() | json }}
-    </div>
+		<div class="leaderboard-table">
+			<div class="header">
+				<tr>
+					<th>Place</th>
+					<th>Name</th>
+					<th>Total EXP</th>
+					<th>Level</th>
+					<th>Joined</th>
+				</tr>
+			</div>
+			<div class="body">
+				@for (user of top4To10Users(); track user; let idx = $index) {
+					<tr>
+						@if (user) {
+							<td>
+								<span class="place">{{ idx + 4 }}</span>
+							</td>
+							<td>{{ user.firstName | titlecase }} {{ user.lastName | titlecase }}</td>
+							<td>{{ user.totalExp }}</td>
+							<td>{{ calculateLevelFunc(user.totalExp) }}</td>
+							<td>{{ user.createdAt | sinceDate }}</td>
+						} @else {
+							<td>
+								<span class="place">{{ idx + 4 }}</span>
+							</td>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						}
+					</tr>
+				}
+			</div>
+			<p-table [value]="top4To10Users()" [tableStyle]="{ 'min-width': '50rem' }">
+				<ng-template pTemplate="header"> </ng-template>
+				<ng-template pTemplate="body" let-user> </ng-template>
+			</p-table>
+		</div>
 	}
 </main>
