refactor languages in frontend

--- a/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-achievements/profile-achievements.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-achievements/profile-achievements.component.html
@@ -9,7 +9,7 @@
 					<p-progressBar
 						[value]="
 							(achievement.progress / achievement.goal) * 100 <= 100
-								? (achievement.progress / achievement.goal) * 100
+								? formatToTwoDecimalPlaces((achievement.progress / achievement.goal) * 100)
 								: 100
 						"
 					></p-progressBar>
