--- a/Phase_B/gptalk-frontend/src/app/pages/learn/exp-bar/exp-bar.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/exp-bar/exp-bar.component.html
@@ -1,7 +1,7 @@
 <div class="exp-bar-wrapper">
 
   <p-progressBar [value]="progressVal()" [ngClass]="'progress-bar-custom'" [style]="{'border-radius': '4px'}">
-    <ng-template pTemplate="content" let-value>
+    <ng-template pTemplate="content">
       <span></span>
     </ng-template>
   </p-progressBar>
