Adjusted exercise rewards implementation Added hints functionality

--- a/Phase_B/gptalk-frontend/src/app/pages/learn/match-the-words/match-the-words.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/match-the-words/match-the-words.component.html
@@ -27,8 +27,8 @@
       }
     </div>
 
-    @if (isDone() && matchMistakes()) {
+    @if (isDone() && penalties()) {
       <div class="flex flex-column text-center justify-content-center">
-        <p>Total incorrect matches: {{matchMistakes()}}</p>
+        <p>Total incorrect matches: {{penalties()}}</p>
       </div>
     }
