--- a/Phase_B/gptalk-frontend/src/app/pages/learn/translate-the-sentence/translate-the-sentence.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/translate-the-sentence/translate-the-sentence.component.html
@@ -1,5 +1,5 @@
-    <div class="flex justify-content-center">
-      <p>{{exerciseData().question}}</p>
+    <div class="sentence-wrapper flex justify-content-center">
+      <p style="text-transform: capitalize;">{{exerciseData().question}}</p>
     </div>
     <div class="flex justify-content-center mb-2">
       <textarea
@@ -15,19 +15,32 @@
         >
       </textarea>
     </div>
-    <div class="buttons-group write-sentence-submit-btn flex justify-content-center">
+    <div class="buttons-group flex">
       @if (!isDone()) {
         <p-button
-          id="writSentenceSubmitBtn"
+          id="submitTranslationBtn"
           label="Submit"
           severity="primary"
           (onClick)="inputForm.value ?
           lrn.setExerciseResult(vrf.verifyAnswer(inputForm.value,exerciseData)) : null"/>
+
+        <p-button
+          id="hintBtn"
+          label="?"
+          pTooltip="Get a hint. Will deduct 10 EXP from the exercise's reward."
+          tooltipPosition="left"
+          severity="info"
+          (onClick)="lrn.displayHint()"/>
       }
     </div>
 
+    <div class="hint-wrapper flex justify-content-start mt-2" [dir]="utilHtml.langDirection(lessonLanguage)">
+      <p>{{hintText() ? 'Hint: ' + hintText() : ''}}</p>
+    </div>
     @if (isDone()) {
-      <div class="translation-wrapper flex justify-content-center flex-column text-center ">
+      <div class="translation-wrapper flex justify-content-center flex-column text-center "
+           [dir]="utilHtml.langDirection(lessonLanguage)"
+      >
           <p><b>Translation:</b></p>
           <p>{{exerciseData().question}} means:</p>
           <p>{{exerciseData().answer}}</p>
