--- a/Phase_B/gptalk-frontend/src/app/pages/learn/translate-the-sentence/translate-the-sentence.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/translate-the-sentence/translate-the-sentence.component.scss
@@ -9,3 +9,17 @@
   resize: none;
   max-width: 70vw;
 }
+
+.buttons-group {
+  justify-content: center;
+  position: relative;
+}
+
+#hintBtn {
+  position: absolute;
+  right: 5px;
+}
+
+.hint-wrapper, .sentence-wrapper {
+  font-size: 26px;
+}
