--- a/Phase_B/gptalk-frontend/src/app/pages/home/daily-word/daily-word.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/home/daily-word/daily-word.component.scss
@@ -5,3 +5,15 @@
     background-color: var(--background-clr);
   }
 }
+
+
+.loading-wrapper {
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  & p {
+    font-size: 1.1rem;
+  }
+}
