change expert to advanced

--- a/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-details/profile-details.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-details/profile-details.component.html
@@ -20,19 +20,19 @@
 					<p>{{ profile().createdAt | sinceDate }}</p>
 				</div>
 
-				<div class="globe info">
+				<!-- <div class="globe info">
 					<i class="pi pi-globe"></i>
 					<p>{{ profile().country | titlecase }}</p>
-				</div>
+				</div> -->
 			</div>
 		</div>
 
-		<div class="edit-btn">
+		<!-- <div class="edit-btn">
 			<p-button
 				label="Edit Profile"
 				severity="contrast"
 				[style]="{ width: '100%' }"
 			></p-button>
-		</div>
+		</div> -->
 	</div>
 }
